# felinet

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  _INSTRUCOES_MIGRACAO.md  checkpoint_v23.sh  coletar_dados_monografia.sh  experimento_definitivo.sh  instalar_figuras_cap5.sh  promover_para_main.sh  pyproject.toml  reorganizar.sh  simplificar_branches.sh
01_pesquisa/_buscas_brutas/: catflw.json  megadetector_beery.json  web_detectors.json  web_reid_extra.json
01_pesquisa/etapa2_engenharia/: B2_pipeline_visao_computacional_parte1.md  B2_pipeline_visao_computacional_parte3.md  B4_arquitetura_referencia_parte1.md  B6_consolidacao_parte1_sintese_tecnica.md  BlocoH_Hardware.md
02_latex/: USPSC-unidades.tex
02_latex/capitulos/: cap2_hardware.tex  cap3_pipeline.tex  cap4_metodologia.tex
02_latex/pre-textuais/: agradecimentos.tex  dedicatoria.tex
03_codigo/: README.md
03_codigo/scripts/: adaptar_template_uspsc.py  avaliar_reid_petface.py  baixar_amostras.py  classificar_amostras.py  detectar_amostras.py  detectar_subset_dev.py  extrair_embeddings.py  extrair_todos.py  gerar_figuras_reid.py  preparar_subset_dev.py  resumir_reid.py  validar_latex.py  validar_petface.py  visualizar_deteccoes.py
03_codigo/tests/: conftest.py  test_datasets_lila.py  test_e0_camtrap.py  test_e0_exif.py  test_e0_ingestao.py  test_e0_manifesto.py  test_e1_megadetector_smoke.py  test_e1_schema.py  test_e1_visualizar.py  test_fase3_decisor.py  test_fase3_schema.py  test_fase4_avaliacao.py  test_fase4_schema.py
05_figuras/: README.md
08_modelos/: README.md
anexos/: README.md
configs/: README.md  datasets_locais.example.yaml  modelos.yaml  paths.yaml  pipeline.yaml
dados_monografia_20260527T043206Z/: LOG_experimento.txt  RELATORIO_SMOKE.md  _INVENTARIO.txt
dados_monografia_20260527T043206Z/runs_ambiente/: ambiente_20260526T213928.json  ambiente_20260526T213928.md  ambiente_20260526T215150.json  ambiente_20260526T215150.md  ambiente_20260526T220615.json  ambiente_20260526T220615.md  ambiente_20260526T222227.json  ambiente_20260526T222227.md  ambiente_20260526T225217.json  ambiente_20260526T225217.md  ambiente_20260526T230802.json  ambiente_20260526T230802.md  ambiente_20260526T231241.json  ambiente_20260526T231241.md  ambiente_20260527T033714.json  ambiente_20260527T033714.md  ambiente_20260527T040001.json  ambiente_20260527T040001.md  ambiente_20260527T041454.json  ambiente_20260527T041454.md
data/: README.md
data/interim/: classificacoes_amostras.json  deteccoes_amostras.json  deteccoes_subset_dev.json  embeddings_petface.npz  embeddings_petface_n0200.npz  embeddings_subset_dev.json
data/processed/: avaliacao_openset_petface_n0050_latest.json  avaliacao_openset_petface_n0200_20260526T011154Z.json  avaliacao_openset_petface_n0200_latest.json  avaliacao_openset_petface_n0500_20260526T011155Z.json  avaliacao_openset_petface_n0500_latest.json  avaliacao_reid_petface_latest.json
data/schemas/: anotacao_identidade.schema.json  avaliacao_reid.schema.json  classificacoes.schema.json  deteccoes.schema.json
docs/: ARQUITETURA.md  DATASETS.md  DEBUGGING.md  MONOGRAFIA_ORQUESTRADOR.md  README.md  REPRODUCAO_MONOGRAFIA.md
docs/arquitetura/: decisao_renomeacao_felinet.md  fluxo_cascata.md  layout_runs.md  padrao_src_layout.md  perfis_dev_prod.md
docs/datasets/: justificativa_uso.md
docs/escopo/: nao_implementado.md
docs/governanca/: CHANGELOG_revisao_v2.md  MIGRACAO_v1_para_v2_estrutura.md  MIGRACAO_v22_para_v23.md  README.md  decisoes_template_uspsc.md  fontes_e_lacunas.md  glossario_notas_rodape.md  notas_pontos_futuros.md  sumario_detalhado_monografia.md
docs/manuais/: README.md
docs/pesquisa/: README.md
docs/runbooks/: baixar_modelos.md  rodar_cascata_dev.md  rodar_reid_petface.md
entrega/: README.md
felinet_runs_patch/: _INSTRUCOES_APLICAR.md
felinet_v22/: Makefile  README.md
modelos/: README.md
reports/: README.md
scripts/: diagnostico_smoke.sh  monografia.json  organizar_layout.py  organizar_repo.py  orquestrar_monografia.py  registrar_ambiente.py  smoke_test.py
src/: README.md
tests/: README.md  conftest.py  test_bloco9_matriz_confusao.py  test_comandos_datasets_linkar.py  test_comandos_figuras.py  test_comandos_figuras_bloco7.py  test_comandos_figuras_bloco9.py  test_comandos_multifonte.py  test_comandos_tabelas_bloco4.py  test_comandos_tabelas_bloco6.py  test_datasets_felidae.py  test_datasets_iteradores.py  test_datasets_lila.py  test_datasets_registro.py  test_e0_camtrap.py  test_e0_exif.py  test_e0_ingestao.py  test_e1_megadetector_smoke.py  test_e1_schema.py  test_e1_visualizar.py  test_easyrun.py  test_fase3_decisor.py  test_fase3_schema.py  test_fase4_avaliacao.py  test_fase4_avaliacao_openset.py  test_fase4_schema.py  test_hotfix_amostragem_resolver.py  test_modo_dev.py  test_pipeline_orquestrador.py  test_runs.py  test_smoke_patches.py
tex/: Makefile  main.tex
(+247 files in other folders)
