[project]
name = "tcc-gatos-campus2"
version = "0.1.0"
description = "Sistema de monitoramento por visão computacional da colônia de gatos do Campus 2 da USP São Carlos"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Felipi Adenildo Soares Sousa", email = "felipiadenildo@gmail.com" }
]

dependencies = [
    # Core CV / ML
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "ultralytics>=8.3.0",
    "opencv-python>=4.10.0",
    "Pillow>=10.4.0",
    "numpy>=1.26,<2.0",
    "scipy>=1.13.0",
    # Re-identificação / embeddings
    "hnswlib>=0.8.0",
    "scikit-learn>=1.5.0",
    "transformers>=4.44.0",
    "timm>=1.0.0",
    # Pipeline de detecção
    "PytorchWildlife>=1.2.0",
    # Persistência e dados
    "SQLAlchemy>=2.0.30",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "frictionless>=5.17",        # validação Camtrap-DP
    # Web / visualização
    "streamlit>=1.38.0",
    "plotly>=5.24.0",
    "folium>=0.17.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    # Utilitários
    "pydantic>=2.8.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    # Reprodutibilidade
    "mlflow>=2.16.0",
    "dvc>=3.55.0",
    "piexif>=1.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
    "pre-commit>=3.8.0",
]
gpu = [
    # instalar separadamente conforme CUDA do notebook do Pesquisador
    # exemplo (CUDA 12.1): pip install torch --index-url https://download.pytorch.org/whl/cu121
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["03_codigo"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["03_codigo/tests"]
pythonpath = ["03_codigo"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[tool.ruff.lint.per-file-ignores]
"03_codigo/**/__init__.py" = ["N999"]