[project]
name = "felinet"
version = "0.2.0"
description = "Sistema de monitoramento por visao computacional da colonia de gatos do Campus 2 da USP Sao Carlos"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Felipi Adenildo Soares Sousa", email = "felipiadenildo@gmail.com" }
]

dependencies = [
    # Core CV / ML
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "ultralytics>=8.3.0",
    "opencv-python>=4.10.0",
    "Pillow>=10.4.0",
    "numpy>=1.26,<2.0",
    "scipy>=1.13.0",
    # Re-identificacao / embeddings
    "hnswlib>=0.8.0",
    "scikit-learn>=1.5.0",
    "transformers>=4.44.0",
    "timm>=1.0.0",
    # Pipeline de deteccao
    "PytorchWildlife>=1.2.0",
    # Persistencia e dados
    "SQLAlchemy>=2.0.30",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "frictionless>=5.17",
    # Web / visualizacao
    "streamlit>=1.38.0",
    "plotly>=5.24.0",
    "folium>=0.17.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    # Utilitarios
    "pydantic>=2.8.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "PyYAML>=6.0",
    # Reprodutibilidade
    "mlflow>=2.16.0",
    "dvc>=3.55.0",
    "piexif>=1.1.3",
    "soundfile>=0.13.1",
    "speciesnet>=5.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
    "pre-commit>=3.8.0",
]
gpu = [
    # instalar separadamente conforme CUDA do notebook do Pesquisador
    # exemplo (CUDA 12.1): pip install torch --index-url https://download.pytorch.org/whl/cu121
]

[project.scripts]
felinet = "felinet.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/felinet"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not smoke'"
markers = [
    "smoke: testes que dependem de GPU/modelos pesados",
]

[tool.uv]
index-url = "https://pypi.org/simple"
extra-index-url = ["https://download.pytorch.org/whl/cu121"]
